Fix image paths

--- a/src/components/BaseFooter.astro
+++ b/src/components/BaseFooter.astro
@@ -1,5 +1,10 @@
 ---
-import BaseNoscript from "./BaseNoscript.astro"
+import { Image } from "astro:assets";
+import TwitterLogo from '../images/logos/Twitter.svg';
+import InstagramLogo from '../images/logos/Instagram.svg';
+import FacebookLogo from '../images/logos/Facebook.svg';
+
+import BaseNoscript from "./BaseNoscript.astro";
 ---
 <!-- Footer -->
 <section class="bg-black sectionSize">
@@ -8,16 +13,13 @@ import BaseNoscript from "./BaseNoscript.astro"
     </div> -->
     <div class="flex mb-8">
         <a href="https://www.facebook.com/artyompalevich/" target="_blank">
-            <img src='assets/logos/Facebook.svg' alt="Facebook logo" class="mx-4" />
+            <Image src={FacebookLogo} alt="Facebook logo" class="mx-4" />
         </a>
-        <!-- <a href="#">
-            <img src='assets/logos/Youtube.svg' alt="Youtube logo" class="mx-4" />
-        </a> -->
         <a href="https://instagram.com/apalevich" target="_blank">
-            <img src='assets/logos/Instagram.svg' alt="Instagram logo" class="mx-4" />
+            <Image src={InstagramLogo} alt="Instagram logo" class="mx-4" />
         </a>
         <a href="https://x.com/apalevich" target="_blank">
-            <img src='assets/logos/Twitter.svg' alt="Twitter logo" class="mx-4" />
+            <Image src={TwitterLogo} alt="Twitter logo" class="mx-4" />
         </a>
     </div>
     <div class="text-white opacity-40 font-montserrat text-sm">
