Update component styles

--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -1,6 +1,6 @@
 <section class="bg-black text-white sectionSize">
     <div>
-        <h2 class="secondaryTitle bg-underline2 bg-100%">What we do</h2>
+        <h2 class="secondaryTitle bg-underline9 bg-left-bottom bg-no-repeat bg-100% pb-4">What we do</h2>
     </div>
     <div class="flex flex-col md:flex-row">
         <div class="flex-1 mx-8 flex flex-col items-center my-4">
