--- a/src/components/StepsSection.astro
+++ b/src/components/StepsSection.astro
@@ -59,7 +59,7 @@ const content: ContentItem[] = [
         }
 
     </div>
-    <div class="bg-beige shadow-2xl rotate-2 p-8 mt-12 mb-4 max-w-80 xl:self-start xl:-rotate-3 xl:ml-16">
+    <div class="bg-beige shadow-2xl rotate-2 p-8 mt-12 lg:mt-4 mb-4 max-w-80 lg:self-start lg:-rotate-3 xl:ml-16">
         <p class="mb-8 text-base leading-relaxed text-left text-gray-600 font-montserrat italic">
             We follow an agile model, which means that tasks are estimated in advance, and the project has 
             <!-- <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-1"> -->
