--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -21,7 +21,7 @@ import Highlight2 from '../images/Highlight2.svg'
         and measurable projects where quality is more important
         <!-- <br class="hidden md:block"> -->
         than hours through our 
-        <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-2">Front&#8209;End&nbsp;expertise</span>
+        <span class="bg-underline8 bg-left-bottom bg-no-repeat bg-100% pb-2">Front&#8209;End&nbsp;expertise</span>
       </p>
       <div class="font-montserrat mb-4">
         <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-4 mb-2">
