--- a/src/components/TestimonialSection.astro
+++ b/src/components/TestimonialSection.astro
@@ -1,4 +1,9 @@
 ---
+import { Image } from 'astro:assets';
+import QuotationLeft from '../images/Quotation_left.svg';
+import QuotationRight from '../images/Quotemark_right.svg';
+
+
 interface contentItem {
     text: string;
     name: string;
@@ -9,7 +14,7 @@ interface contentItem {
 
 const content: contentItem[] = [
     {
-        text: 'Artem is an experienced developer - I was really happy to work with him!',
+        text: '',
         name: 'Kirill Zhirnov',
         position: 'CEO',
         company: 'Boundless Commerce',
@@ -17,11 +22,11 @@ const content: contentItem[] = [
     }
 ];
 ---
-<section class="py-10 md:py-16 sectionSize text-center">
-    <div class="max-w-screen-xl mx-auto px-4">
-        <div class="">
+<section class="pt-4 pb-10 md:pb-16 sectionSize text-center">
+    <div class="max-w-screen-xl mx-auto">
+        <!-- <div class="">
             <h2 class="secondaryTitle bg-underline2 bg-100%">Testimonial</h2>
-        </div>
+        </div> -->
 
         <!-- <p class="font-normal text-gray-500 text-xs md:text-base mb-10 md:mb-20">
             We are proud to work with our clients
@@ -31,15 +36,20 @@ const content: contentItem[] = [
             {
                 content.map(item => (
                     // <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                        <div class="bg-gray-50 px-8 py-10 rounded-md">
-                            <p class="font-normal text-gray-500 text-md mb-4 italic">
-                                {item.text}
-                            </p>
+                        <div class="bg-gray-50 py-10 rounded-md">
+                            <div class="relative">
+                                <Image src={QuotationLeft} alt='Quotation mark' class='h-12 absolute top-3 -left-24 md:h-16 md:top-0 md:-left-36' />
+                                <p class="font-normal text-gray-500 text-md mx-10 mb-4 italic">
+                                    {/* {item.text} */}
+                                    Artem is an experienced developer. I&nbsp;was really happy to&nbsp;work with him!
+                                </p>
+                                <Image src={QuotationRight} alt='Quotation mark' class='h-12 absolute top-3 -right-24 rotate-2 md:h-16 md:top-0 md:-right-36' />
+                            </div>
 
                             <h6 class="font-semibold text-[#000] text-md">
                                 {item.name}
                                 <br>
-                                <span class="font-medium text-gray-300 text-sm">- {item.position} at {item.company}</span>
+                                <span class="font-medium text-gray-300 text-sm">— {item.position} at {item.company}</span>
                             </h6>
                         </div>
                     // </div>
