--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -1,19 +1,25 @@
-<section class="lg:px-48 md:px-12 px-4">
-    <div class="2xl:max-w-4xl lg:py-24 2xl:px-12 py-12 mx-auto">
-        <div class="2xl:max-w-4xl flex flex-wrap items-center mx-auto">
-            <div class="md:mb-0 flex flex-col lg:flex-row items-start mb-4 w-full">
-                <!-- <img src="https://thirdspacelearning.com/wp-content/uploads/2022/05/Venn-Diagram-HUB-Image-2.png" class="md:w-[30%]"> -->
-                <h2 class="text-gray-900 md:text-5xl lg:text-4xl mb-8 text-3xl font-thin leading-none tracking-tighter text-center w-full" style="line-height: 120%;">
-                    We are a web development agency<br>
-                    that delivers the high-quality user experiences
-                    <br>through our 
-                    <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-2">front-end expertise</span>.
-                    <!-- <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-1">best user experience</span>
+<section class="px-4 md:px-12 lg:px-48">
+	<div class="mx-auto py-12 lg:py-24 2xl:max-w-4xl 2xl:px-12">
+		<div class="mx-auto flex flex-wrap items-center 2xl:max-w-4xl">
+			<div class="mb-4 flex w-full flex-col items-start md:mb-0 lg:flex-row">
+				<!-- <img src="https://thirdspacelearning.com/wp-content/uploads/2022/05/Venn-Diagram-HUB-Image-2.png" class="md:w-[30%]"> -->
+				<h2
+					class="text-gray-900 mb-8 w-full text-center text-3xl font-thin leading-none tracking-tighter md:text-5xl lg:text-4xl"
+					style="line-height: 120%;"
+				>
+					We are a web development agency<br />
+					that delivers the high-quality user experiences
+					<br />through our
+					<span
+						class="bg-underline1-flip bg-100% bg-left-bottom bg-no-repeat pb-2"
+						>front-end expertise</span
+					>.
+					<!-- <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-1">best user experience</span>
                     through
                     <br>our leading
                     <span class="bg-underline1 bg-left-bottom bg-no-repeat bg-100% pb-2">front-end expertise</span> -->
-                </h2>
-            </div>
-        </div>
-    </div>
-  </section>
+				</h2>
+			</div>
+		</div>
+	</div>
+</section>
