--- a/src/components/BaseNoscript.astro
+++ b/src/components/BaseNoscript.astro
@@ -1,6 +1,13 @@
 <!-- Google Tag Manager (noscript) -->
 <noscript>
-    {import.meta.env.PROD && (
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGRW3QLF" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    )}
+	{
+		import.meta.env.PROD && (
+			<iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-KGRW3QLF"
+				height="0"
+				width="0"
+				style="display:none;visibility:hidden"
+			/>
+		)
+	}
 </noscript>
