--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,59 +1,69 @@
 ---
-import { Picture } from 'astro:assets';
-import heroImage from '../images/hero_image.jpg';
-import Highlight1 from '../images/Highlight1.svg'
-import Highlight2 from '../images/Highlight2.svg'
+import { Picture } from "astro:assets";
+import heroImage from "../images/hero_image.jpg";
+import Highlight1 from "../images/Highlight1.svg";
+import Highlight2 from "../images/Highlight2.svg";
 ---
+
 <section
-    class="pt-24 md:mt-0 md:h-screen flex flex-col justify-center text-center md:text-left md:flex-row md:justify-between md:items-center lg:px-48 md:px-12 px-4 bg-secondary md:gap-4 sectionSize">
-    <div class="md:flex-1 md:mr-10">
-      <h1 class="font-pt-serif text-5xl md:text-5xl font-bold mb-7 capitalize">
-        Web development with
-        <span class="bg-underline1 bg-left-bottom bg-no-repeat bg-100%">
-            results
-        </span>
-        at the&nbsp;forefront
-      </h1>
-      <p class="font-pt-serif text-lg md:text-md font-normal mb-7 md:pr-6">
-        <!-- We deliver clear and measurable projects where quality is more important than hours. -->
-        We are a web development agency that delivers clear
-        <!-- <br class="hidden md:block"> -->
-        and measurable projects where quality is more important
-        <!-- <br class="hidden md:block"> -->
-        than hours through our 
-        <span class="bg-underline8 bg-left-bottom bg-no-repeat bg-100% pb-2">Front&#8209;End&nbsp;expertise</span>
-      </p>
-      <div class="font-montserrat mb-4">
-        <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-4 mb-2">
-            Let's talk
-        </button>
-        <button class="px-6 py-4 border-2 border-black border-solid rounded-lg text-black">
-            View Study Cases
-        </button>
-      </div>
-    </div>
-    <div class="flex justify-around md:block mt-8 md:mt-0 md:flex-1">
-        <div class="relative">
-            <Picture
-                src={Highlight1}
-                format='svg'alt="Hightlight decoration"
-                class='absolute -top-24 left-12'
-            />
-        </div>
-        <Picture
-            formats={['webp', 'jpg']}
-            src={heroImage}
-            alt="Artem Palevich works at computer"
-            class="rotate-3 md:rotate-6 mx-auto shadow-xl -mb-16 md:mb-0"
-            width={heroImage.width*0.75} height={heroImage.height*0.75}
-        />
-        <div class="relative">
-            <Picture
-                src={Highlight2}
-                format='svg'
-                alt="Hightlight decoration"
-                class='absolute -bottom-16 right-16'
-            />
-        </div>
-    </div>
-  </section>
+	class="sectionSize flex flex-col justify-center bg-secondary px-4 pt-24 text-center md:mt-0 md:h-screen md:flex-row md:items-center md:justify-between md:gap-4 md:px-12 md:text-left lg:px-48"
+>
+	<div class="md:mr-10 md:flex-1">
+		<h1 class="mb-7 font-pt-serif text-5xl font-bold capitalize md:text-5xl">
+			Web development with
+			<span class="bg-underline1 bg-100% bg-left-bottom bg-no-repeat">
+				results
+			</span>
+			at the&nbsp;forefront
+		</h1>
+		<p class="md:text-md mb-7 font-pt-serif text-lg font-normal md:pr-6">
+			<!-- We deliver clear and measurable projects where quality is more important than hours. -->
+			We are a web development agency that delivers clear
+			<!-- <br class="hidden md:block"> -->
+			and measurable projects where quality is more important
+			<!-- <br class="hidden md:block"> -->
+			than hours through our
+			<span class="bg-underline8 bg-100% bg-left-bottom bg-no-repeat pb-2"
+				>Front&#8209;End&nbsp;expertise</span
+			>
+		</p>
+		<div class="mb-4 font-montserrat">
+			<button
+				class="mb-2 mr-4 rounded-lg border-2 border-solid border-black bg-black px-6 py-4 text-white"
+			>
+				Let's talk
+			</button>
+			<button
+				class="rounded-lg border-2 border-solid border-black px-6 py-4 text-black"
+			>
+				View Study Cases
+			</button>
+		</div>
+	</div>
+	<div class="mt-8 flex justify-around md:mt-0 md:block md:flex-1">
+		<div class="relative">
+			<Picture
+				src={Highlight1}
+				format="svg"
+				alt="Hightlight decoration"
+				class="absolute -top-24 left-12"
+			/>
+		</div>
+		<Picture
+			formats={["webp", "jpg"]}
+			src={heroImage}
+			alt="Artem Palevich works at computer"
+			class="mx-auto -mb-16 rotate-3 shadow-xl md:mb-0 md:rotate-6"
+			width={heroImage.width * 0.75}
+			height={heroImage.height * 0.75}
+		/>
+		<div class="relative">
+			<Picture
+				src={Highlight2}
+				format="svg"
+				alt="Hightlight decoration"
+				class="absolute -bottom-16 right-16"
+			/>
+		</div>
+	</div>
+</section>
