--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -1,37 +1,58 @@
-<section class="bg-black text-white sectionSize">
-    <div>
-        <h2 class="secondaryTitle bg-underline9 bg-left-bottom bg-no-repeat bg-100% pb-4">What we do</h2>
-    </div>
-    <div class="flex flex-col md:flex-row">
-        <div class="flex-1 mx-8 flex flex-col items-center my-4">
-            <div class="border-2 rounded-full bg-white text-black h-12 w-12 flex justify-center items-center mb-3">
-                1
-            </div>
-            <h3 class="font-montserrat font-medium text-xl mb-2 text-center">Early-Stage Web&nbsp;Development</h3>
-            <p class="text-center font-montserrat">
-                <!-- We specialize in building MVPs and crafting scalable, reliable software architectures. Every decision we make ensures your foundation is future-proof, saving you time and money as you grow. -->
-                Every decision made in the early stages impacts the future of your product — trust our experts to get it right from the start.
-            </p>
-        </div>
-        <div class="flex-1 mx-8 flex flex-col items-center my-4 text-center">
-            <div class="border-2 rounded-full bg-white text-black h-12 w-12 flex justify-center items-center mb-3">
-                2
-            </div>
-            <h3 class="font-montserrat font-medium text-xl mb-2 text-center">Supporting Creative Teams</h3>
-            <p class="text-center font-montserrat">
-                <!-- Our expertise in collaborating with design and marketing teams guarantees smooth communication and fast results. We understand the language of business and creatives alike, delivering exactly what your vision demands. -->
-                With extensive experience working alongside designers and marketers, we ensure smooth integration of technical solutions into your campaigns and strategies.
-            </p>
-        </div>
-        <div class="flex-1 mx-8 flex flex-col items-center my-4">
-            <div class="border-2 rounded-full bg-white text-black h-12 w-12 flex justify-center items-center mb-3">
-                3
-            </div>
-            <h3 class="font-montserrat font-medium text-xl mb-2 text-center md:min-h-14">Auditing and Consulting</h3>
-            <p class="text-center font-montserrat">
-                <!-- Our senior specialists, with experience from international and renowned companies, offer tailored audits and actionable insights. Get the clarity and strategy you need to drive success. -->
-                With experience in renowned international companies, we provide top-tier audits and actionable insights.
-            </p>
-        </div>
-    </div>
+<section class="sectionSize bg-black text-white">
+	<div>
+		<h2
+			class="secondaryTitle bg-underline9 bg-100% bg-left-bottom bg-no-repeat pb-4"
+		>
+			What we do
+		</h2>
+	</div>
+	<div class="flex flex-col md:flex-row">
+		<div class="mx-8 my-4 flex flex-1 flex-col items-center">
+			<div
+				class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-black"
+			>
+				1
+			</div>
+			<h3 class="mb-2 text-center font-montserrat text-xl font-medium">
+				Early-Stage Web&nbsp;Development
+			</h3>
+			<p class="text-center font-montserrat">
+				<!-- We specialize in building MVPs and crafting scalable, reliable software architectures. Every decision we make ensures your foundation is future-proof, saving you time and money as you grow. -->
+				Every decision made in the early stages impacts the future of your product
+				— trust our experts to get it right from the start.
+			</p>
+		</div>
+		<div class="mx-8 my-4 flex flex-1 flex-col items-center text-center">
+			<div
+				class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-black"
+			>
+				2
+			</div>
+			<h3 class="mb-2 text-center font-montserrat text-xl font-medium">
+				Supporting Creative Teams
+			</h3>
+			<p class="text-center font-montserrat">
+				<!-- Our expertise in collaborating with design and marketing teams guarantees smooth communication and fast results. We understand the language of business and creatives alike, delivering exactly what your vision demands. -->
+				With extensive experience working alongside designers and marketers, we ensure
+				smooth integration of technical solutions into your campaigns and strategies.
+			</p>
+		</div>
+		<div class="mx-8 my-4 flex flex-1 flex-col items-center">
+			<div
+				class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-black"
+			>
+				3
+			</div>
+			<h3
+				class="mb-2 text-center font-montserrat text-xl font-medium md:min-h-14"
+			>
+				Auditing and Consulting
+			</h3>
+			<p class="text-center font-montserrat">
+				<!-- Our senior specialists, with experience from international and renowned companies, offer tailored audits and actionable insights. Get the clarity and strategy you need to drive success. -->
+				With experience in renowned international companies, we provide top-tier
+				audits and actionable insights.
+			</p>
+		</div>
+	</div>
 </section>
