--- a/src/components/StepsSection.astro
+++ b/src/components/StepsSection.astro
@@ -1,71 +1,83 @@
 ---
-import { Image } from 'astro:assets';
-import HeartIcon from '../images/logos/Heart.svg';
+import { Image } from "astro:assets";
+import HeartIcon from "../images/logos/Heart.svg";
 
 interface ContentItem {
-    title: string;
-    description: string;
+	title: string;
+	description: string;
 }
 
 const content: ContentItem[] = [
-    {
-        title: 'Exploration',
-        // description: 'We start with a few emails and a call to understand your business needs, priorities, and conditions. This conversation helps us shape the foundation of the project.'
-        description: 'We start with a few emails and a call. During the call, we dive deep into your business conditions, priorities, and specific project requirements.'
-    },
-    {
-        title: 'Specialist Scouting',
-        // description: 'Based on your requirements, we identify and approach specialists with the necessary experience and skills. This often involves back-and-forth clarifications to define the project’s scope and ensure alignment between the client and our team.'
-        description: 'We scout top-tier specialists with the relevant experience and skills for your project. '
-    },
-    {
-        title: 'Defining the Project',
-        // description: 'Together, we establish the project’s contours: goals, stages, outcomes, required effort, and resources (specialist roles, tools, and access to your resources). At this point, preliminary agreements with the specialists are secured.'
-        description: 'Together, we define the project scope, goals, stages, and expected outcomes.'+'We determine the amount of effort required, necessary resources, specialist roles, and any access needed to your existing systems.'
-    },
-    {
-        title: 'Proposal and Agreement',
-        // description: 'We prepare a comprehensive commercial proposal detailing the project framework. Once approved by the client, we finalize agreements with specialists and confirm the conditions.'
-        description: 'With preliminary commitments from our specialists, we prepare a comprehensive commercial proposal for you.'+'You review the proposal, and upon acceptance, we move forward.'
-    },
-    {
-        title: 'Team Assembly and Kickoff',
-        description: 'A Project Manager is assigned as your primary point of contact and the liaison with the specialists.'
-    },
-    {
-        title: 'Completion & Feedback',
-        description: 'We present the final results, meeting all predefined goals and criteria.'+'Post-project, we exchange feedback to improve future collaborations and celebrate successes.'
-    }
-]
+	{
+		title: "Exploration",
+		// description: 'We start with a few emails and a call to understand your business needs, priorities, and conditions. This conversation helps us shape the foundation of the project.'
+		description:
+			"We start with a few emails and a call. During the call, we dive deep into your business conditions, priorities, and specific project requirements.",
+	},
+	{
+		title: "Specialist Scouting",
+		// description: 'Based on your requirements, we identify and approach specialists with the necessary experience and skills. This often involves back-and-forth clarifications to define the project’s scope and ensure alignment between the client and our team.'
+		description:
+			"We scout top-tier specialists with the relevant experience and skills for your project. ",
+	},
+	{
+		title: "Defining the Project",
+		// description: 'Together, we establish the project’s contours: goals, stages, outcomes, required effort, and resources (specialist roles, tools, and access to your resources). At this point, preliminary agreements with the specialists are secured.'
+		description:
+			"Together, we define the project scope, goals, stages, and expected outcomes." +
+			"We determine the amount of effort required, necessary resources, specialist roles, and any access needed to your existing systems.",
+	},
+	{
+		title: "Proposal and Agreement",
+		// description: 'We prepare a comprehensive commercial proposal detailing the project framework. Once approved by the client, we finalize agreements with specialists and confirm the conditions.'
+		description:
+			"With preliminary commitments from our specialists, we prepare a comprehensive commercial proposal for you." +
+			"You review the proposal, and upon acceptance, we move forward.",
+	},
+	{
+		title: "Team Assembly and Kickoff",
+		description:
+			"A Project Manager is assigned as your primary point of contact and the liaison with the specialists.",
+	},
+	{
+		title: "Completion & Feedback",
+		description:
+			"We present the final results, meeting all predefined goals and criteria." +
+			"Post-project, we exchange feedback to improve future collaborations and celebrate successes.",
+	},
+];
 ---
-<section class="sectionSize bg-secondary">
-    <div>
-      <h2 class="secondaryTitle bg-underline3 bg-100%">How It Works</h2>
-    </div>
-    <div class="md:grid md:grid-cols-2 md:grid-rows-2">
-        
-        {
-            content.map((item, i) => (
-            <div class="flex items-start font-montserrat my-6 mr-10">
-                <div class="font-semibold text-2xl mr-4 text-black">{i+1}.</div>
-                <div>
-                    <h3 class="font-semibold text-2xl">{item.title}</h3>
-                    <p>
-                        {item.description}
-                    </p>
-                </div>
-            </div>          
-            ))
-        }
 
-    </div>
-    <div class="bg-beige shadow-2xl rotate-2 p-8 mt-12 lg:mt-4 mb-4 max-w-80 lg:self-start lg:-rotate-3 xl:ml-16">
-        <p class="mb-8 text-base leading-relaxed text-left text-gray-600 font-montserrat italic">
-            We follow an agile model, which means that tasks are estimated in advance, and the project has 
-            <!-- <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-1"> -->
-                defined milestones.
-            <!-- </span> -->
-            This approach ensures transparency for our clients and allows our professionals to work efficiently.
-        </p>
-    </div>
+<section class="sectionSize bg-secondary">
+	<div>
+		<h2 class="secondaryTitle bg-underline3 bg-100%">How It Works</h2>
+	</div>
+	<div class="md:grid md:grid-cols-2 md:grid-rows-2">
+		{
+			content.map((item, i) => (
+				<div class="my-6 mr-10 flex items-start font-montserrat">
+					<div class="mr-4 text-2xl font-semibold text-black">{i + 1}.</div>
+					<div>
+						<h3 class="text-2xl font-semibold">{item.title}</h3>
+						<p>{item.description}</p>
+					</div>
+				</div>
+			))
+		}
+	</div>
+	<div
+		class="mb-4 mt-12 max-w-80 rotate-2 bg-beige p-8 shadow-2xl lg:mt-4 lg:-rotate-3 lg:self-start xl:ml-16"
+	>
+		<p
+			class="text-gray-600 mb-8 text-left font-montserrat text-base italic leading-relaxed"
+		>
+			We follow an agile model, which means that tasks are estimated in advance,
+			and the project has
+			<!-- <span class="bg-underline1-flip bg-left-bottom bg-no-repeat bg-100% pb-1"> -->
+			defined milestones.
+			<!-- </span> -->
+			This approach ensures transparency for our clients and allows our professionals
+			to work efficiently.
+		</p>
+	</div>
 </section>
