--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,43 +3,49 @@
 @tailwind utilities;
 
 @font-face {
-	font-family: 'Montserrat Italic Variable';
+	font-family: "Montserrat Italic Variable";
 	font-style: italic;
 	font-display: swap;
 	font-weight: 100 900;
-	src: url(@fontsource-variable/montserrat/files/montserrat-latin-wght-italic.woff2) format('woff2-variations');
-	unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
-  }
+	src: url(@fontsource-variable/montserrat/files/montserrat-latin-wght-italic.woff2)
+		format("woff2-variations");
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+		U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 @font-face {
-	font-family: 'Montserrat Variable';
+	font-family: "Montserrat Variable";
 	font-style: normal;
 	font-display: swap;
 	font-weight: 100 900;
-	src: url(@fontsource-variable/montserrat/files/montserrat-latin-wght-normal.woff2) format('woff2-variations');
-	unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+	src: url(@fontsource-variable/montserrat/files/montserrat-latin-wght-normal.woff2)
+		format("woff2-variations");
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+		U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body {
-	font-family: 'Montserrat Variable', sans-serif;
+	font-family: "Montserrat Variable", sans-serif;
 }
 
 @layer components {
 	.sectionSize {
-	  @apply lg:px-48 md:px-12 px-4 py-14 flex flex-col items-center;
+		@apply flex flex-col items-center px-4 py-14 md:px-12 lg:px-48;
 	}
 	.secondaryTitle {
-	  @apply font-pt-serif text-3xl bg-left-bottom bg-no-repeat pb-8 px-16 mb-8;
+		@apply mb-8 bg-left-bottom bg-no-repeat px-16 pb-8 font-pt-serif text-3xl;
 	}
-  }
-  
-  .growing-underline {
+}
+
+.growing-underline {
 	display: block;
 	position: relative;
 	padding: 0.2em 0;
 	overflow: hidden;
-  }
-  
-  .growing-underline::after {
+}
+
+.growing-underline::after {
 	content: "";
 	position: absolute;
 	bottom: 0;
@@ -47,13 +53,14 @@ body {
 	width: 100%;
 	height: 0.1em;
 	background-color: black;
-	transition: opacity 300ms, transform 300ms;
+	transition:
+		opacity 300ms,
+		transform 300ms;
 	opacity: 1;
 	transform: translate3d(-100%, 0, 0);
-  }
-  
-  .growing-underline:hover::after,
-  .growing-underline:focus::after {
+}
+
+.growing-underline:hover::after,
+.growing-underline:focus::after {
 	transform: translate3d(0, 0, 0);
-  }
-  
+}
