--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -1,3 +1,30 @@
+---
+interface ContentItem {
+	icon?: string;
+	title: string;
+	description: string;
+}
+
+const common: ContentItem[] = [
+	{
+		title: "Early-Stage Web&nbsp;Development",
+		description: "Every decision made in the early stages impacts the future of your product — trust our experts to get it right from the start."
+		// description: "We specialize in building MVPs and crafting scalable, reliable software architectures. Every decision we make ensures your foundation is future-proof, saving you time and money as you grow."
+	},
+	{
+		title: "Supporting Creative Teams",
+		description: "With extensive experience working alongside designers and marketers, we ensure smooth integration of technical solutions into your campaigns and strategies."
+		// description: "Our expertise in collaborating with design and marketing teams guarantees smooth communication and fast results. We understand the language of business and creatives alike, delivering exactly what your vision demands."
+	},
+	{
+		title: "Auditing and Consulting",
+		description: "With experience in renowned international companies, we provide top-tier audits and actionable insights."
+		// description: "Our senior specialists, with experience from international and renowned companies, offer tailored audits and actionable insights. Get the clarity and strategy you need to drive success."
+	}
+]
+
+const { content = common } = Astro.props;
+---
 <section class="sectionSize bg-black text-white">
 	<div>
 		<h2
@@ -7,52 +34,17 @@
 		</h2>
 	</div>
 	<div class="flex flex-col md:flex-row">
-		<div class="mx-8 my-4 flex flex-1 flex-col items-center">
-			<div
-				class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-black"
-			>
-				1
-			</div>
-			<h3 class="mb-2 text-center font-montserrat text-xl font-medium">
-				Early-Stage Web&nbsp;Development
-			</h3>
-			<p class="text-center font-montserrat">
-				<!-- We specialize in building MVPs and crafting scalable, reliable software architectures. Every decision we make ensures your foundation is future-proof, saving you time and money as you grow. -->
-				Every decision made in the early stages impacts the future of your product
-				— trust our experts to get it right from the start.
-			</p>
-		</div>
-		<div class="mx-8 my-4 flex flex-1 flex-col items-center text-center">
-			<div
-				class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-black"
-			>
-				2
-			</div>
-			<h3 class="mb-2 text-center font-montserrat text-xl font-medium">
-				Supporting Creative Teams
-			</h3>
-			<p class="text-center font-montserrat">
-				<!-- Our expertise in collaborating with design and marketing teams guarantees smooth communication and fast results. We understand the language of business and creatives alike, delivering exactly what your vision demands. -->
-				With extensive experience working alongside designers and marketers, we ensure
-				smooth integration of technical solutions into your campaigns and strategies.
-			</p>
-		</div>
-		<div class="mx-8 my-4 flex flex-1 flex-col items-center">
-			<div
-				class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-black"
-			>
-				3
-			</div>
-			<h3
-				class="mb-2 text-center font-montserrat text-xl font-medium md:min-h-14"
-			>
-				Auditing and Consulting
-			</h3>
-			<p class="text-center font-montserrat">
-				<!-- Our senior specialists, with experience from international and renowned companies, offer tailored audits and actionable insights. Get the clarity and strategy you need to drive success. -->
-				With experience in renowned international companies, we provide top-tier
-				audits and actionable insights.
-			</p>
-		</div>
+		{
+			content.map((item, i) => (
+				<div class="mx-8 my-4 flex flex-1 flex-col items-center">
+					<div
+						class="mb-3 flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-black text-xl"
+						set:html={item.icon || i+1}
+					/>
+					<h3 class="mb-2 text-center font-montserrat text-xl font-medium min-h-14" set:html={item.title}/>
+					<p class="text-center font-montserrat" set:html={item.description} />
+				</div>
+			))
+		}
 	</div>
 </section>
