Moved heading to SliderSection for improved structure and clarity

--- a/src/pages/marketing-communication.astro
+++ b/src/pages/marketing-communication.astro
@@ -78,24 +78,9 @@ const content = {
 			subheading="We manage the tech. You master the message."
 		/>
 		<ServicesSection content={content.services} />
-		<div class="sectionSize">
-			<h2
-				class="text-gray-900 mb-8 w-full text-center text-3xl font-thin leading-none tracking-tighter md:text-5xl lg:text-4xl"
-				style="line-height: 120%;"
-			>
-				<!-- I have 
-                <span class="bg-underline8 bg-100% bg-left-bottom bg-no-repeat pb-2">8&nbsp;years of experience</span>
-                supporting the technical needs of design and marketing departments. This background gives me a solid understanding of market demands, allowing me to turn ideas into market-ready products. I also collaborate with experts as needed. -->
-				With 8&nbsp;years of experience
-				<!-- in supporting the technical needs of design and marketing departments, I have a solid understanding of turning ideas into market-ready products. I also collaborate with specialists as needed. -->
-				supporting design and marketing departments, I have developed strong skills
-				and built a solid network of
-				<br />
-				<span class="bg-underline7 bg-100% bg-left-bottom bg-no-repeat pb-2"
-					>top-tier specialists ready to collaborate:</span
-				>
-			</h2>
-		</div>
 		<SliderSection content={content.specialists} />
+        <StepsSection />
+		<TestimonialSection />
+		<BaseFooter />
 	</body>
 </html>
