--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,18 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
 import GithubWidget from "../components/GithubWidget.astro";
-import BaseNoscript from "../components/BaseNoscript.astro";
+import HeroSection from "../components/HeroSection.astro";
+import ServicesSection from "../components/ServicesSection.astro";
+import StepsSection from "../components/StepsSection.astro";
+import BannerSection from "../components/BannerSection.astro";
+import TestimonialSection from "../components/TestimonialSection.astro";
+import BaseHead from "../components/BaseHead.astro";
+import BaseFooter from "../components/BaseFooter.astro";
 
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+
+import { Picture, Image } from "astro:assets";
+import AstroLogo from "../images/logos/astro-logo-dark.svg";
+import CrossIcon from "../images/logos/Cross.svg";
 ---
 
 <!doctype html>
@@ -12,18 +21,28 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<header>
-			<GithubWidget />
-		</header>
-		<main class="flex h-screen items-center justify-center bg-secondary">
-			<div class="text-center text-4xl">
-				<p class="mb-4">🚧</p>
-				<h1 class="font-bold">Under Construction!</h1>
-				<a href="/underconstruction" class="text-xl underline"
-					>Want to see the draft version?</a
-				>
-			</div>
-		</main>
-		<BaseNoscript />
+		<HeroSection />
+		<ServicesSection />
+
+		<div class="sectionSize">
+			<h2
+				class="text-gray-900 mb-8 w-full text-center text-3xl font-thin leading-none tracking-tighter md:text-5xl lg:text-4xl"
+				style="line-height: 120%;"
+			>
+				Our team is made up exclusively of senior professionals, each with <span
+					class="bg-underline1-flip bg-100% bg-left-bottom bg-no-repeat pb-1"
+					>up&nbsp;to 8 years</span
+				> of proven track record of success in their respective fields.
+			</h2>
+		</div>
+		<div class="flex flex-row justify-center">
+			<Image src={CrossIcon} alt="Cross icon" />
+			<Image src={CrossIcon} alt="Cross icon" />
+			<Image src={CrossIcon} alt="Cross icon" />
+		</div>
+
+		<StepsSection />
+		<TestimonialSection />
+		<BaseFooter />
 	</body>
 </html>
