--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,14 +12,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		<BaseHead title={"Page not found!"} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<header>
-			<GithubWidget />
-		</header>
 		<main class="flex h-screen items-center justify-center bg-secondary">
 			<div class="text-center text-4xl">
 				<p class="mb-4">🚧</p>
 				<h1 class="font-bold">Page not found!</h1>
-				<a href="/underconstruction" class="text-xl underline"
+				<a href="/" class="text-xl underline"
 					>Would you like to open the home page?</a
 				>
 			</div>
