--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import { Picture, Image } from "astro:assets";
 import AstroLogo from "../images/logos/astro-logo-dark.svg";
 import CrossIcon from "../images/logos/Cross.svg";
+import { agencyPageCopy } from "../content/textcopy";
 ---
 
 <!doctype html>
@@ -21,7 +22,7 @@ import CrossIcon from "../images/logos/Cross.svg";
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<HeroSection />
+		<HeroSection content={agencyPageCopy.hero} />
 		<ServicesSection />
 
 		<div class="sectionSize">
